[project]
name = "python-readability"
version = "0.0.1"
description = "@mozilla/readability for Python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pythonmonkey~=1.0.0 ; sys_platform != 'emscripten'",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.uv]
dev-dependencies = [
    "pyodide-py",
    "ruff~=0.7.0",
]

[tool.ruff.lint]
extend-select = [
    "F",    # flake8
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "TRY",  # tryceratops
    "RUF",  # ruff
    "FURB", # refurb
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "PIE",  # flake8-pie
    "PTH",  # flake8-use-pathlib
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
]
